# scanreader

./: .buildinfo  .gitignore  .readthedocs.yml  README.md  __main__.py  demo_scanreader.html  env_base.yml  environment_docs.yml  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  searchindex.js  setup.py  usage.html
_sources/: demo_scanreader.ipynb  usage.md
_sources/apidocs/: index.rst.txt  scanreader.rst.txt
_sources/apidocs/scanreader/: scanreader.core.rst  scanreader.exceptions.rst  scanreader.rst
apidocs/: index.html  scanreader.html
apidocs/scanreader/: scanreader.core.html  scanreader.exceptions.html  scanreader.html  scanreader.multiroi.html  scanreader.scans.html  scanreader.utils.html
docs/: conf.py  demo_reader.ipynb  guide.md  guide_2.ipynb  index.md  index.rst  requirements.txt  usage.md
docs/_static/: custom.css
docs/api/: index.rst
docs/apidocs/: index.rst
docs/apidocs/scanreader/: scanreader.multiroi.rst  scanreader.rst  scanreader.scans.rst  scanreader.utils.rst
scanreader/: __init__.py  __main__.py  _widget.py  core.py  lbm_widget.py  multiroi.py  scans.py  utils.py
scanreader.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
